--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -16,10 +16,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v2.1.5
         with:
-          node-version: '16'
+          node-version: '12'
 
+      - run: npm i -D vue-template-compiler
       - run: npx vuepress build
       - name: Upload result of vuepress build
         uses: actions/upload-artifact@v2
